# demo-ctr-pipeline

./: CLAUDE.md  README.md  TASKS.md  docker-compose.yml  prometheus.yml
docker/flink/: Dockerfile
docker/prometheus/: prometheus.yml
docs/: BLOG_POST_OPERATOR_CHAINING_GUIDE.md  CHAINING_ALTERNATIVES_AND_FUTURE.md  CLICKHOUSE_MATERIALIZED_VIEW.md  KAFKA_KRAFT_MIGRATION.md  MIGRATION_PLAN.md  OPERATOR_CHAINING.md  OPERATOR_CHAINING_DEEP_DIVE.md  OPERATOR_CHAINING_REFERENCE.md  OPERATOR_CHAINING_REPORT.md  WHY_CHAINING_MATTERS.md
flink-app/: build.gradle  build.gradle.kts  settings.gradle.kts
flink-app/src/main/java/com/example/ctr/: CTRCalculatorJob.java  CTRResult.java  CtrApplication.java  Event.java  ProductEventCounts.java
flink-app/src/main/java/com/example/ctr/application/: CtrJobService.java
flink-app/src/main/java/com/example/ctr/config/: AppConfig.java  ClickHouseProperties.java  CtrJobProperties.java  DuckDBProperties.java  KafkaProperties.java  RedisProperties.java
flink-app/src/main/kotlin/com/example/ctr/: CtrApplication.kt
flink-app/src/main/kotlin/com/example/ctr/application/: CtrJobService.kt
flink-app/src/main/kotlin/com/example/ctr/config/: AppConfig.kt  ClickHouseProperties.kt  CtrJobProperties.kt  DuckDBProperties.kt  KafkaProperties.kt  (+1 more)
flink-app/src/main/resources/: application-local.yml  application.yml  logback.xml
grafana/dashboards/: flink_dashboard.json
producers/: click_producer.py  impression_producer.py  pyproject.toml
scripts/: create-topics.sh  deploy-flink-job.sh  init-clickhouse.sh  setup.sh  start-producers.sh
(+38 files in other folders)
