[project]
name = "kafka-producers"
version = "1.0.0"
description = "Kafka data producers for CTR calculation demo"
authors = [
    { name = "CTR Demo", email = "demo@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "kafka-python>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "flake8>=4.0.0",
]